Fix/Styles: CartItems now aligns regarless of picture size

--- a/client/src/styles/components/CartItemStyles.scss
+++ b/client/src/styles/components/CartItemStyles.scss
@@ -7,6 +7,13 @@
   padding: 0.5rem 0;
   margin: 2rem 0;
 
+  &__img-container {
+    width: 30rem;
+    display: flex;
+    justify-content: center;
+    margin-right: 2rem;
+  }
+
   &__image {
     height: 100%;
   }
